--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,15 +1,20 @@
 page-home {
 	ion-content{
-    background: rgb(229, 227, 223);
-    #map {
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      transition: opacity 150ms ease-in;
-      display: block;
-      &.show-map{
-        opacity: 1;
-      }
-    }
-  }
+		#map {
+		  width: 100%;
+		  height: 100%;
+		  opacity: 0;
+		  transition: opacity 150ms ease-in;
+		  display: block;
+		  &.show-map{
+			opacity: 1;
+		  }
+		}
+		.box {
+			@media (min-width: 992px){
+				margin-left: 33.33333333%;
+				width: 33.33333333%;
+			}
+		}
+	}
 }
