comenzar viaje, falta el finalizar, y refinar las querys mas detalles

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,13 +15,19 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.alertCustomCss {
+.verViajeCss {
+	h2 {
+		text-align: center;
+	}
 	.alert-wrapper{
-		opacity: 1;
-		transform: scale(1);
 		width: 50%;
+		height: 100%;
 		max-width: 100%;
-	}	
+	}
+	.alert-message {
+		max-height: 100%;
+		height: 78%;
+	}
 	ul {
 		list-style-type: none;
 		margin: 0;
@@ -30,12 +36,23 @@
 	 
 	li {
 		color: black;
-		padding: 3%;
-		font: 200 /1.5 Helvetica, Verdana, sans-serif;
+		padding: 1%;
+		font: 200 14px/1.5 Helvetica, Verdana, sans-serif;
 		border-bottom: 1px solid #ccc;
+		/*text-align: center;*/
 	}
 	 
 	li:last-child {
 		border: none;
 	}
+}
+
+.adp-placemark {
+	td, th {
+		padding: 3px;
+	}
+}
+
+.adp, .adp table {
+    width: 100%;
 }
