--- a/src/pages/viaje/viaje.scss
+++ b/src/pages/viaje/viaje.scss
@@ -2,13 +2,16 @@ page-viaje {
 	ion-content{
 		#map {
 		  width: 100%;
-		  height: 100%;
+		  height: 60%;
 		  opacity: 0;
 		  transition: opacity 150ms ease-in;
 		  display: block;
 		  &.show-map{
 			opacity: 1;
 		  }
+		}
+		.scroll{
+		  height: calc(40%);
 		}
 	}
 }
