cerrar viaje + reiniciar viaje

--- a/src/pages/cerrar_viaje/cerrar_viaje.scss
+++ b/src/pages/cerrar_viaje/cerrar_viaje.scss
@@ -5,7 +5,13 @@ page-cerrar_viaje {
 			width: 33.33333333%;
 		}
 		textarea {
-		   resize: none;
+			resize: none;
+		}
+		.label-md {
+			margin: 13px 8px;
+		}
+		.item-md {
+			padding: 0;
 		}
     }
 }
