--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,51 +1,54 @@
 page-login {
-  .login-content {
-	background: #56CA96;
- 
-    .login-box {
-		background: #399F8B;
-		padding: 20px 20px 0px 20px;
-		margin-top: 30px;
-		@media (min-width: 992px){
-			margin-left: 33.33333333%;
-			width: 33.33333333%;
+    .login-content {
+		background-color: #f8f8f8;
+		
+		.login-box {
+			margin-top: 30px;
+			@media (min-width: 992px){
+				margin-left: 33.33333333%;
+				width: 33.33333333%;
+			}
+		}
+		
+		.panel {
+			margin-bottom: 20px;
+			background-color: #fff;
+			border: 1px solid transparent;
+			border-radius: 4px;
+			-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+			box-shadow: 0 1px 1px rgba(0,0,0,.05);
+		}
+		
+		.panel-heading {
+			padding: 10px 15px;
+			border-bottom: 1px solid transparent;
+			border-top-left-radius: 3px;
+			border-top-right-radius: 3px;
+		}
+		
+		.panel-default {
+			border-color: #ddd;
+		}
+		
+		.panel-default > .panel-heading {
+			color: #333;
+			background-color: #f5f5f5;
+			border-color: #ddd;
+		}
+		
+		.panel-body {
+			padding: 15px;
+		}
+	 
+		ion-item {
+			font-size: 0.9em;
+			margin-bottom: 10px;
+			border: 1px solid #ccc;
+		}
+	 
+		.item-inner {
+			border-bottom-color: #ffffff !important;
+			box-shadow: none !important;
 		}
     }
- 
-    ion-row {
-		align-items: center;
-		text-align: center;
-    }
- 
-    ion-item {
-        border-radius: 30px !important;
-        padding-left: 30px !important;
-        font-size: 0.9em;
-        margin-bottom: 10px;
-        border: 1px solid #ffffff;
-        border-bottom: 0px !important;
-        box-shadow: none !important;
-    }
- 
-    .signup-col {
-		margin: 0px 16px 0px 16px;
-		padding-bottom: 20px;
-    }
- 
-    .item-inner {
-		border-bottom-color: #ffffff !important;
-		box-shadow: none !important;
-    }
- 
-    .submit-btn {
-		background: #51CFB1;
-		border-radius: 30px !important;
-		border: 1px solid #ffffff;
-    }
- 
-    .register-btn {
-		   color: #ffffff;
-		   font-size: 0.8em;
-    }
-  }
 }
